--- a/CSS Properties/Motivation Meme Project/index.html
+++ b/CSS Properties/Motivation Meme Project/index.html
@@ -26,7 +26,7 @@ But it must have the following features:
 <body>
   <div>
     <img src="assets/images/daenerys.jpeg" alt="daenerys">
-    <h1>THAT SPECIAL MOMENT</h1>
+    <h1>That special moment</h1>
     <p>when you find the perfect avocado at supermarket</p>
   </div>
 </body>
